[package]
authors = ["Jorge Aparicio <jorge@japaric.io>", "Per Lindgren <per.lindgren@ltu.se>"]
categories = ["concurrency", "embedded", "no-std"]
description = "Procedural macros of the cortex-m-rtfm crate"
documentation = "https://docs.rs/cortex-m-rtfm-macros"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rtfm-macros"
repository = "https://github.com/japaric/cortex-m-rtfm"
version = "0.3.1"

[dependencies]
error-chain = "0.10.0"
quote = "0.3.15"
rtfm-syntax = "0.2.1"

[dependencies.syn]
version = "0.12.14"
features = ["full", "extra-traits"]

[lib]
proc-macro = true
